--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		</symbol>
 	</svg>
 
-	<div class="wrapper">
+	<div class="wrapper page_gray-foot">
 		<!--Header-->
 		<header class="header" id="header">
 			<div class="header__menu">
@@ -944,6 +944,32 @@
 					</div>
 				</div>
 			</section><!--/blog-->
+			<section class="text-block p-block">
+				<div class="container">
+					<div class="title-box">
+						<h2 class="title">НПО «ФЕНИКС»</h2>
+					</div>
+					<div class="text-block__content">
+						<div class="text-block__text">
+							<p>НПО «ФЕНИКС» осуществляет производство и продажу цветных металлов и сплавов. Собственные производственные мощности позволяют выпускать широкий ассортимент продукции: медь (марочная и фосфористая), припои, сурьма, цинк (гранулы, лигатуры, сплавы и др.), бронза, висмут, олово, свинец, литейные латуни и многое другое. По Санкт-Петербургу мы осуществляем доставку заказов собственным автотранспортом.</p>
+							<div class="text-block__more">
+								<p>Завод цветных металлов и сплавов НПО «ФЕНИКС» располагает современным оборудованием, включая печи, которое дает возможность полностью контролировать весь производственный процесс и выпускать продукцию высокого качества. Многолетний опыт в работе делает НПО «ФЕНИКС» надежным партнером. </p>
+								<ul class="list-dots">
+									<li>Работаем с 2003 года</li>
+									<li>Выпускаем все востребованные виды сплавов и цветных металлов – завод регулярно модернизирует оборудование и наращивает мощности.</li>
+									<li>Гарантируем качество и индивидуальный подход</li>
+								</ul>
+								<p>На базе Научно-производственного объединения «ФЕНИКС» имеется сертифицированная аккредитованная лаборатория. Вся выпущенная продукция перед отправкой заказчику проходит строгий контроль качества. Гарантируем соответствие цветных металлов и сплавов всем требованиям ГОСТов и ТУ.</p>
+								<p>Завод цветных металлов НПО «ФЕНИКС» также оказывает услуги по определению химического состава металлов и сплавов. Лабораторное исследование выполняется в строгом соответствии с действующими нормативами. По итогам исследования выдается протокол измерения, сертификат, паспорт образца.</p>
+							</div>
+							<a href="#" class="text-block__btn-more">
+								<span class="text-block__show">Подробнее</span>
+								<span class="text-block__hide">Скрыть</span>
+							</a>
+						</div>
+					</div>
+				</div>
+			</section><!--/text-block-->
 		</main>
 		<footer class="footer">
 			<div class="container">
