--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 		</symbol>
 	</svg>
 
-	<div class="wrapper page page_about">
+	<div class="wrapper">
 		<!--Header-->
 		<header class="header" id="header">
 			<div class="header__menu">
@@ -837,7 +837,7 @@
 			</section><!--/testimonial-->
 		</main>
 
-		<footer class="footer">
+		<footer class="footer footer-gray">
 			<div class="container">
 				<div class="footer__nav">
 					<nav class="nav">
