--- a/product-card.html
+++ b/product-card.html
@@ -83,7 +83,7 @@
 		</symbol>
 	</svg>
 
-	<div class="wrapper page page_product-card page_gray-foot">
+	<div class="wrapper">
 		<!--Header-->
 		<header class="header" id="header">
 			<div class="header__menu">
@@ -365,15 +365,13 @@
 							</a>
 						</div>
 						<div class="breadcrumbs__links">
-							<a href="index.html" class="breadcrumbs__item">
-								<span>Главная</span>
-							</a>
-							<a href="index.html" class="breadcrumbs__item breadcrumbs__item_back">
-								<span>Производство</span>
-							</a>
-							<a href="#" class="breadcrumbs__item active">
-								<span>Сплав Розе (слиток, пруток, гранула)</span>
-							</a>
+							<div class="breadcrumbs__item"> 
+     							<span>
+     							   <a href="index.html">Главная</a>
+     							   <a href="/category/">Производство</a>Какая-то страница категории
+     							</span>                                                    
+   							</div>           
+
 						</div>
 					</div><!--/breadcrumbs-->
 				</div>
