--- a/service-consult.html
+++ b/service-consult.html
@@ -78,7 +78,7 @@
 		</symbol>
 	</svg>
 
-	<div class="wrapper page page_service-consult page_gray-foot">
+	<div class="wrapper">
 		<!--Header-->
 		<header class="header" id="header">
 			<div class="header__menu">
