--- a/service-delivery.html
+++ b/service-delivery.html
@@ -78,7 +78,7 @@
 		</symbol>
 	</svg>
 
-	<div class="wrapper page page_service-delivery">
+	<div class="wrapper">
 		<!--Header-->
 		<header class="header" id="header">
 			<div class="header__menu">
@@ -438,7 +438,7 @@
 			</div><!--/photo-slider-->
 		</main>
 
-		<footer class="footer">
+		<footer class="footer footer-gray">
 			<div class="container">
 				<div class="footer__nav">
 					<nav class="nav">
