--- a/service-labor.html
+++ b/service-labor.html
@@ -78,7 +78,7 @@
 		</symbol>
 	</svg>
 
-	<div class="wrapper page page_service-labor">
+	<div class="wrapper">
 		<!--Header-->
 		<header class="header" id="header">
 			<div class="header__menu">
@@ -382,7 +382,7 @@
 							</div>
 							<div class="description">Предлагаем платные услуги по определению химического состава цветных металлов и их сплавов и черных металлов с последующей выдачей, заверенных сертифицированной и аккредитованной лабораторией НПО "Феникс", протоколов измерения, сертификатов и паспортов на исследуемый образец.</div>
 						</div>
-						<div class="services-box__nav box-nav">
+						<div class="services-box__nav box-nav mobile-none">
 							<h3 class="box-nav__title">Оказываем услуги</h3>
 							<div class="box-nav__item active">
 								<a href="#">Лабораторное исследование металлов и сплавов</a>
@@ -634,7 +634,7 @@
 			</div><!--/box-nav__mobile-->
 		</main>
 
-		<footer class="footer">
+		<footer class="footer footer-gray">
 			<div class="container">
 				<div class="footer__nav">
 					<nav class="nav">
