--- a/blog-article.html
+++ b/blog-article.html
@@ -83,7 +83,7 @@
 		</symbol>
 	</svg>
 
-	<div class="wrapper page page_blog-article page_gray-foot">
+	<div class="wrapper">
 		<!--Header-->
 		<header class="header" id="header">
 			<div class="header__menu">
