--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
 		</symbol>
 	</svg>
 
-	<div class="wrapper page page_contact">
+	<div class="wrapper">
 		<!--Header-->
 		<header class="header" id="header">
 			<div class="header__menu">
@@ -586,17 +586,13 @@
 				<div class="address-map">
 					<div class="address-map__content" id="map">
 						<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=89611f12-74a6-43cc-bb51-779a8262b656" type="text/javascript"></script>
-
-						<!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6c13a0b19dce0f4da045b5208663235285a98a6e9ceef177b2a30ff35c8b3f48&amp;width=100%&amp;height=850&amp;lang=ru_RU&amp;scroll=true"></script> -->
-
-						
 						<script src="assets/js/map.js" type="text/javascript"></script>
 					</div>
 				</div>
 			</div><!--/address-->
 		</main>
 
-		<footer class="footer">
+		<footer class="footer footer-gray">
 			<div class="container">
 				<div class="footer__nav">
 					<nav class="nav">
