--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		</symbol>
 	</svg>
 
-	<div class="wrapper page_gray-foot">
+	<div class="wrapper">
 		<!--Header-->
 		<header class="header" id="header">
 			<div class="header__menu">
@@ -254,6 +254,7 @@
 								<a href="#" class="nav__link">Производство <span>продукция</span></a>
 								<div class="nav-dropdown">
 									<div class="nav-dropdown__inner">
+										<a href="#" class="nav-dropdown__item">Висмут</a>
 										<a href="#" class="nav-dropdown__item">Медь</a>
 										<a href="#" class="nav-dropdown__item">Цинк</a>
 										<a href="#" class="nav-dropdown__item">Свинец</a>
