--- a/production.html
+++ b/production.html
@@ -93,7 +93,7 @@
 		</symbol>
 	</svg>
 
-	<div class="wrapper page page_manufacture">
+	<div class="wrapper">
 		<!--Header-->
 		<header class="header" id="header">
 			<div class="header__menu">
@@ -455,6 +455,7 @@
 					<div class="title-box mb-50">
 						<h2 class="title">Производство</h2>
 						<div class="view-btn">
+							<span class="view-btn__description">Вид каталога</span>
 							<a href="#" class="table active">
 								<svg>
 									<use xlink:href="#view-icon_1"></use>
@@ -825,7 +826,7 @@
 			</section><!--/text-block-->
 		</main>
 
-		<footer class="footer">
+		<footer class="footer footer-gray">
 			<div class="container">
 				<div class="footer__nav">
 					<nav class="nav">
