--- a/service.html
+++ b/service.html
@@ -73,7 +73,7 @@
 		</symbol>
 	</svg>
 
-	<div class="wrapper page page_service page_gray-foot">
+	<div class="wrapper">
 		<!--Header-->
 		<header class="header" id="header">
 			<div class="header__menu">
