--- a/production.html
+++ b/production.html
@@ -260,6 +260,7 @@
 								<a href="#" class="nav__link">Производство <span>продукция</span></a>
 								<div class="nav-dropdown">
 									<div class="nav-dropdown__inner">
+										<a href="#" class="nav-dropdown__item">Висмут</a>
 										<a href="#" class="nav-dropdown__item">Медь</a>
 										<a href="#" class="nav-dropdown__item">Цинк</a>
 										<a href="#" class="nav-dropdown__item">Свинец</a>
