--- a/product-card.html
+++ b/product-card.html
@@ -390,6 +390,20 @@
 							<div class="product-card__quote quote">
 								<p>Сплав Розе изготавливаются под заказ в короткие сроки. Цена на сплав Розе договорная. Каждая поставка сопровождается сертификатом.</p>
 							</div><!--/quote-->
+							<div class="download-btns">
+								<a href="#" class="download-btn">
+									<div class="download-btn__icon">
+										<img src="assets/images/pdf-ico.svg" alt="">
+									</div>
+									<div class="download-btn__name">Скачать ISO 9453-2020</div>
+								</a><!--/download-btn-->
+								<a href="#" class="download-btn">
+									<div class="download-btn__icon">
+										<img src="assets/images/pdf-ico.svg" alt="">
+									</div>
+									<div class="download-btn__name">Скачать ISO 9453-2020</div>
+								</a><!--/download-btn-->
+							</div><!--/download-btns-->
 							<div class="product-card__text">
 								<p>Во время процесса пайки периодически происходят ситуации, когда необходима низкая температура припоя. Это бывает при изготовлении микросхем или в случаях, когда есть риск перегрева элементов микроэлектроники, но не требуется высокая прочность. Для этих целей наиболее подходящим является сплав Розе.</p>
 							</div>
