--- a/product_card.html
+++ b/product_card.html
@@ -555,7 +555,7 @@
 							<div class="product-block__btn">
 								<a href="#" class="download-btn">
 									<div class="download-btn__icon">
-										<img src="assets/images/pdf-ico.svg" alt="">
+										<img src="assets/images/ad-ico.png" alt="">
 									</div>
 									<div class="download-btn__name">Смотреть или скачать ГОСТ 10928-90 на сайте НПО Феникс</div>
 								</a><!--/download-btn-->
