--- a/production.html
+++ b/production.html
@@ -806,20 +806,134 @@
 					</div>
 				</div>
 			</section><!--/manufacture-->
+			<section class="tags">
+				<div class="container">
+					<div class="title-box">
+						<h3 class="title">ОБЛАКО ТЕГОВ</h3>
+					</div>
+					<div class="tags__inner">
+						<a href="#" class="tags__item active">Вся продукция</a>
+						<a href="#" class="tags__item">Медь</a>
+						<a href="#" class="tags__item">Медь</a>
+						<a href="#" class="tags__item">Свинец</a>
+						<a href="#" class="tags__item">Свинец</a>
+						<a href="#" class="tags__item">Бронза</a>
+						<a href="#" class="tags__item">Бронза</a>
+						<a href="#" class="tags__item">Латунь</a>
+						<a href="#" class="tags__item">Латунь</a>
+						<a href="#" class="tags__item">Припои</a>
+						<a href="#" class="tags__item">Припои</a>
+						<a href="#" class="tags__item">Цинк</a>
+						<a href="#" class="tags__item">Цинк</a>
+						<a href="#" class="tags__item">Олово</a>
+						<a href="#" class="tags__item">Олово</a>
+						<a href="#" class="tags__item">Баббиты</a>
+						<a href="#" class="tags__item">Баббиты</a>
+						<a href="#" class="tags__item">ПОМ-2</a>
+						<a href="#" class="tags__item">ПОМ-2</a>
+						<a href="#" class="tags__item">Индий</a>
+						<a href="#" class="tags__item">Индий</a>
+						<a href="#" class="tags__item">Сурьма</a>
+						<a href="#" class="tags__item">Сурьма</a>
+						<a href="#" class="tags__item">Фото продукции</a>
+						<a href="#" class="tags__item">Фото продукции</a>
+						<a href="#" class="tags__item">Медь</a>
+						<a href="#" class="tags__item">Вакансии</a>
+						<a href="#" class="tags__item">Свинец</a>
+						<a href="#" class="tags__item">Вакансии</a>
+						<a href="#" class="tags__item">ПОССу50-0,5</a>
+						<a href="#" class="tags__item">Бронза</a>
+						<a href="#" class="tags__item">ПОССу50-0,5</a>
+						<a href="#" class="tags__item">Латунь</a>
+						<a href="#" class="tags__item">ПОССу 40-2</a>
+						<a href="#" class="tags__item">Припои</a>
+						<a href="#" class="tags__item">ПОССу 40-2</a>
+						<a href="#" class="tags__item">Цинк</a>
+						<a href="#" class="tags__item">Олово</a>
+						<a href="#" class="tags__item">ПОССу50-0,5</a>
+						<a href="#" class="tags__item">Баббиты</a>
+						<a href="#" class="tags__item">ПОМ-2</a>
+						<a href="#" class="tags__item">ПОССу 40-2</a>
+						<a href="#" class="tags__item">Индий</a>
+						<a href="#" class="tags__item">Сурьма</a>
+						<a href="#" class="tags__item">Фото продукции</a>
+						<a href="#" class="tags__item">Вакансии</a>
+					</div>
+				</div>
+			</section>
 			<section class="text-block bg-gray bg-line bg-line_left">
 				<div class="container">
 					<div class="title-box">
 						<h2 class="title">НПО «ФЕНИКС»</h2>
 					</div>
 					<div class="text-block__content">
-						<div class="text-block__text">
-							<p>Производство цветных металлов выполняется в строгом соответствии с действующими государственными стандартами. Завод располагает самым современным оборудованием, вся продукция выпускается непосредственно на месте без делегирования каких-либо процессов сторонним подрядчикам. Весь производственный цикл, от выплавки до отгрузки готовой продукции заказчику, НПО «ФЕНИКС» берет на себя. Проверка качества цветных металлов и цветных сплавов выполняется в собственной аккредитованной, лицензированной лаборатории завода.</p>
-							<div class="text-block__more">
-								<p>НПО «ФЕНИКС» имеет все необходимые сертификаты и лицензии на производство цветных сплавов и металлов. Высокий уровень ответственности перед клиентами делает завод надежным партнером. В настоящее время НПО «ФЕНИКС» является одним из лидеров в отрасли производства цветных металлов и уверенно удерживает свои позиции.</p>
+						<div class="text hide-small">
+							<p>НПО «ФЕНИКС» осуществляет производство и продажу цветных металлов и сплавов. Собственные производственные мощности позволяют выпускать широкий ассортимент продукции: медь (марочная и фосфористая), припои, сурьма, цинк (гранулы, лигатуры, сплавы и др.), бронза, висмут, олово, свинец, литейные латуни и многое другое. По Санкт-Петербургу мы осуществляем доставку заказов собственным автотранспортом. </p>
+							<p>Завод цветных металлов и сплавов НПО «ФЕНИКС» располагает современным оборудованием, включая печи, которое дает возможность полностью контролировать весь производственный процесс и выпускать продукцию высокого качества. Многолетний опыт в работе делает НПО «ФЕНИКС» надежным партнером. </p>
+							<div class="text__more show">
+								<h2 class="title mb-20">Работаем с 2003 года</h2>
+								<h3 class="title-sub mb-20">Выпускаем все востребованные виды</h3>
+								<h4 class="title-sub_middle mb-20">Гарантируем качество</h4>
+								<h5 class="title-sub_small mb-20">Регулярно модернизирует оборудование</h5>
+								<h6 class="title-sub_min">Осуществляем доставку</h6>
+								<ul class="list-dots-level">
+									<li>
+										Работаем с 2003 года
+										<ul>
+											<li>Выпускаем все востребованные виды сплавов и цветных металлов – завод регулярно модернизирует оборудование и наращивает мощности.</li>
+										</ul>
+									</li>
+									<li>Гарантируем качество и индивидуальный подход</li>
+								</ul>
+								<ul class="list-num-level">
+									<li>
+										<span class="list-num-level__num">1</span>
+										Работаем с 2003 года
+										<ul>
+											<li>
+												<span class="list-num-level__num">1.1</span>
+												Выпускаем все востребованные виды сплавов и цветных металлов – завод регулярно модернизирует оборудование и наращивает мощности.
+											</li>
+										</ul>
+									</li>
+									<li>
+										<span class="list-num-level__num">10</span>
+										Гарантируем качество и индивидуальный подход
+									</li>
+								</ul>
+								<div class="table">
+									<div class="table__col">
+										<div class="table__header">Свинец</div>
+										<div class="table__item">1.8</div>
+										<div class="table__item">2*10-4</div>
+									</div>
+									<div class="table__col">
+										<div class="table__header">Цинк</div>
+										<div class="table__item">3*10-3</div>
+										<div class="table__item">1*10-3</div>
+									</div>
+									<div class="table__col">
+										<div class="table__header">Сурьма</div>
+										<div class="table__item">5*10-3</div>
+										<div class="table__item">1*10-4</div>
+									</div>
+									<div class="table__col">
+										<div class="table__header">Медь</div>
+										<div class="table__item">1*10-2</div>
+										<div class="table__item">-</div>
+									</div>
+									<div class="table__col">
+										<div class="table__header">Серебро</div>
+										<div class="table__item">1,2*10-1</div>
+										<div class="table__item">2,0</div>
+									</div>
+								</div><!--/table-->
+								<p>На базе Научно-производственного объединения «ФЕНИКС» имеется сертифицированная аккредитованная лаборатория. Вся выпущенная продукция перед отправкой заказчику проходит строгий контроль качества. Гарантируем соответствие цветных металлов и сплавов всем требованиям ГОСТов и ТУ.</p>
+								<p>Завод цветных металлов НПО «ФЕНИКС» также оказывает услуги по определению химического состава металлов и сплавов. Лабораторное исследование выполняется в строгом соответствии с действующими нормативами. По итогам исследования выдается протокол измерения, сертификат, паспорт образца.</p>
 							</div>
-							<a href="#" class="text-block__btn-more">
-								<span class="text-block__show">Подробнее</span>
-								<span class="text-block__hide">Скрыть</span>
+							<a href="#" class="text__btn-more active">
+								<span>Читать полностью</span>
+								<span>Скрыть</span>
 							</a>
 						</div>
 					</div>
