--- a/index.html
+++ b/index.html
@@ -950,9 +950,9 @@
 					<div class="title-box">
 						<h2 class="title">НПО «ФЕНИКС»</h2>
 					</div>
-					<div class="text hide-small">
+					<div class="text">
 						<p>НПО «ФЕНИКС» осуществляет производство и продажу цветных металлов и сплавов. Собственные производственные мощности позволяют выпускать широкий ассортимент продукции: медь (марочная и фосфористая), припои, сурьма, цинк (гранулы, лигатуры, сплавы и др.), бронза, висмут, олово, свинец, литейные латуни и многое другое. По Санкт-Петербургу мы осуществляем доставку заказов собственным автотранспортом.</p>
-						<div class="text__more show">
+						<div class="text__more">
 							<p>Завод цветных металлов и сплавов НПО «ФЕНИКС» располагает современным оборудованием, включая печи, которое дает возможность полностью контролировать весь производственный процесс и выпускать продукцию высокого качества. Многолетний опыт в работе делает НПО «ФЕНИКС» надежным партнером. </p>
 							<ul class="list-dots">
 								<li>Работаем с 2003 года</li>
@@ -962,7 +962,7 @@
 							<p>На базе Научно-производственного объединения «ФЕНИКС» имеется сертифицированная аккредитованная лаборатория. Вся выпущенная продукция перед отправкой заказчику проходит строгий контроль качества. Гарантируем соответствие цветных металлов и сплавов всем требованиям ГОСТов и ТУ.</p>
 							<p>Завод цветных металлов НПО «ФЕНИКС» также оказывает услуги по определению химического состава металлов и сплавов. Лабораторное исследование выполняется в строгом соответствии с действующими нормативами. По итогам исследования выдается протокол измерения, сертификат, паспорт образца.</p>
 						</div>
-						<a href="#" class="text__btn-more active">
+						<a href="#" class="text__btn-more">
 							<span>Читать полностью</span>
 							<span>Скрыть</span>
 						</a>
