--- a/production.html
+++ b/production.html
@@ -867,10 +867,10 @@
 						<h2 class="title">НПО «ФЕНИКС»</h2>
 					</div>
 					<div class="text-block__content">
-						<div class="text hide-small">
+						<div class="text">
 							<p>НПО «ФЕНИКС» осуществляет производство и продажу цветных металлов и сплавов. Собственные производственные мощности позволяют выпускать широкий ассортимент продукции: медь (марочная и фосфористая), припои, сурьма, цинк (гранулы, лигатуры, сплавы и др.), бронза, висмут, олово, свинец, литейные латуни и многое другое. По Санкт-Петербургу мы осуществляем доставку заказов собственным автотранспортом. </p>
 							<p>Завод цветных металлов и сплавов НПО «ФЕНИКС» располагает современным оборудованием, включая печи, которое дает возможность полностью контролировать весь производственный процесс и выпускать продукцию высокого качества. Многолетний опыт в работе делает НПО «ФЕНИКС» надежным партнером. </p>
-							<div class="text__more show">
+							<div class="text__more">
 								<h2 class="title mb-20">Работаем с 2003 года</h2>
 								<h3 class="title-sub mb-20">Выпускаем все востребованные виды</h3>
 								<h4 class="title-sub_middle mb-20">Гарантируем качество</h4>
@@ -931,7 +931,7 @@
 								<p>На базе Научно-производственного объединения «ФЕНИКС» имеется сертифицированная аккредитованная лаборатория. Вся выпущенная продукция перед отправкой заказчику проходит строгий контроль качества. Гарантируем соответствие цветных металлов и сплавов всем требованиям ГОСТов и ТУ.</p>
 								<p>Завод цветных металлов НПО «ФЕНИКС» также оказывает услуги по определению химического состава металлов и сплавов. Лабораторное исследование выполняется в строгом соответствии с действующими нормативами. По итогам исследования выдается протокол измерения, сертификат, паспорт образца.</p>
 							</div>
-							<a href="#" class="text__btn-more active">
+							<a href="#" class="text__btn-more">
 								<span>Читать полностью</span>
 								<span>Скрыть</span>
 							</a>
