--- a/index.html
+++ b/index.html
@@ -290,126 +290,163 @@
 					</nav>
 				</div>
 			</div>
-			<div class="header__mobile-menu mobile-menu">
-				<div class="mobile-menu__close">
-					<svg>
-						<use xlink:href="#close"></use>
-					</svg>
-				</div>
-				<div class="mobile-menu__inner">
-					<div class="mobile-menu__nav">
-						<div class="mobile-menu-top">
-							<ul>
-								<li>
-									<a href="#" class="mobile-menu__link mobile-menu__link-drop">Производство <span>продукция</span></a>
-									<ul class="mobile-menu__submenu">
-										<li class="mobile-menu__back">
-											<img src="assets/images/icons/arrow-left.svg" alt="">
-											<a href="#">Назад</a>
-										</li>
-										<li>
-											<a href="#">Вся продукция</a>
-										</li>
-										<li>
-											<a href="#">Медь</a>
-										</li>
-										<li>
-											<a href="#">Свинец</a>
-										</li>
-										<li>
-											<a href="#">Бронза</a>
-										</li>
-										<li>
-											<a href="#">Латунь</a>
-										</li><li>
-											<a href="#">Припои</a>
-										</li>
-										<li>
-											<a href="#">Цинк</a>
-										</li>
-										<li>
-											<a href="#">Олово</a>
-										</li>
-										<li>
-											<a href="#">Баббиты</a>
-										</li>
-										<li>
-											<a href="#">Индий</a>
-										</li><li>
-											<a href="#">Сурьма</a>
-										</li>
-									</ul>
-								</li>
-							</ul>
-							<ul class="mobile-menu__hide">
-								<li>
-									<a href="#" class="mobile-menu__link">Купим</a>
-								</li>
-								<li>
-									<a href="#" class="mobile-menu__link">Лаборатория <span>платные услуги</span></a>
-								</li>
-								<li>
-									<a href="#" class="mobile-menu__link">Доставка</a>
-								</li>
-								<li>
-									<a href="#" class="mobile-menu__link">Фото</a>
-								</li>
-							</ul>
-						</div>
-						<ul class="mobile-menu-bottom">
-							<li>
-								<a href="about.html" class="mobile-menu__link">О Нас</a>
-							</li>
-							<li>
-								<a href="#" class="mobile-menu__link">Вакансии</a>
-							</li>
-							<li>
-								<a href="#" class="mobile-menu__link">Контакты</a>
-							</li>
-						</ul>
+			<div class="header__mobile-menu menu">
+				<div class="menu__box">
+					<div class="menu__head">
+						<a href="/" class="header-logo">
+							<img src="assets/images/icons/logo.svg" alt="">
+							<div class="header-logo__title">
+								<span>НПО Феникс</span>
+							</div>
+						</a>
+						<a href="#" class="menu__close">
+							<img src="assets/images/icons/close-gray.svg" alt="">
+						</a>
 					</div>
-					<div class="mobile-menu__contact">
-						<div class="header-contact__items">
-							<a href="tel:88123390340" class="header-contact__item header-contact__item-phone">
-								<img src="assets/images/icons/phone-icon.svg" alt="">
-								<span>8 (812) 339-03-40</span>
+					<div class="menu__inner">
+						<div class="menu__list">
+							<div class="menu__link menu__link_sub" data-submenu="menu-production">
+								<span>Наше производство</span>
+							</div>
+							<a href="#" class="menu__link unactive">
+								<span>Купим цветной металлолом</span>
 							</a>
-							<a href="mailto:info@npo-fenix.ru" class="header-contact__item header-contact__item">
-								<img src="assets/images/icons/mail-icon.svg" alt="">
-								<span>info@npo-fenix.ru</span>
+							<div class="menu__link menu__link_sub" data-submenu="menu-service">
+								<span>Лаборатория (платные услуги)</span>
+							</div>
+							<a href="#" class="menu__link">
+								<span>Доставка транспортом</span>
 							</a>
-							<a href="https://yandex.ru/maps/org/npo_feniks/1464768750/?ll=30.555597%2C59.790230&source=wizbiz_new_map_single&z=17" class="header-contact__item" target="blank">
-								<img src="assets/images/icons/pin.svg" alt="">
-								<span>Санкт-Петербург,<br> пос. металлострой</span>
+							<a href="#" class="menu__link">
+								<span>Фото продукции</span>
 							</a>
-							<div class="header-contact__item header-contact__item">
-								<img src="assets/images/icons/clock-icon.svg" alt="">
-								<span>График работы:<br> пн-пт 08:00 - 16:45 (офис)</span>
+						</div>
+						<div class="menu-sub menu-production">
+							<div class="menu__head">
+								<a href="#" class="menu__back">
+									<img src="assets/images/icons/arrow-menu.svg" alt="">
+									<span>Назад</span>
+								</a>
+								<a href="#" class="menu__close">
+									<img src="assets/images/icons/close-gray.svg" alt="">
+								</a>
+							</div>
+							<div class="menu__flex">
+								<div class="menu__col">
+									<a href="#" class="menu__link">
+										<span>О производстве</span>
+									</a>
+									<a href="#" class="menu__link">
+										<span>Химический анализ</span>
+									</a>
+									<a href="#" class="menu__link">
+										<span>Измерение толщин  лакокрасочных покрытий</span>
+									</a>
+								</div>
+								<div class="menu__col">
+									<a href="#" class="menu__link">
+										<span>Спектральный анализ</span>
+									</a>
+									<a href="#" class="menu__link">
+										<span>Ренгенофлюоресцентный анализ</span>
+									</a>
+									<a href="#" class="menu__link menu__link_brown">
+										<span>Все услуги</span>
+									</a>
+								</div>	
 							</div>
 						</div>
-						<div class="header-social mobile-menu__social">
-							<a href="#" class="header-social__icon header-social__icon_big" target="blank">
-								<svg>
-									<use xlink:href="#camera-icon"></use>
-								</svg>
-							</a>
-							<a href="#" class="header-social__icon" target="blank">
-								<svg>
-									<use xlink:href="#vk-icon"></use>
-								</svg>
-							</a>
-							<a href="#" class="header-social__icon header-social__icon_stroke" target="blank">
-								<svg>
-									<use xlink:href="#rusprof-icon"></use>
-								</svg>
-							</a>
-							<div class="header-lang">
-								<span>RU</span>
-								<div class="header-lang__dropdown">
-									<ul>
-										<li><a href="#">EN</a></li>
-										<li><a href="#">RU</a></li>
-									</ul>
+						<div class="menu-sub menu-service">
+							<div class="menu__head">
+								<a href="#" class="menu__back">
+									<img src="assets/images/icons/arrow-menu.svg" alt="">
+									<span>Назад</span>
+								</a>
+								<a href="#" class="menu__close">
+									<img src="assets/images/icons/close-gray.svg" alt="">
+								</a>
+							</div>
+							<div class="menu__flex">
+								<div class="menu__col">
+									<a href="#" class="menu__link">
+										<span>О лаборатории</span>
+									</a>
+									<a href="#" class="menu__link">
+										<span>Химический анализ</span>
+									</a>
+									<a href="#" class="menu__link">
+										<span>Измерение толщин  лакокрасочных покрытий</span>
+									</a>
+								</div>
+								<div class="menu__col">
+									<a href="#" class="menu__link">
+										<span>Спектральный анализ</span>
+									</a>
+									<a href="#" class="menu__link">
+										<span>Ренгенофлюоресцентный анализ</span>
+									</a>
+									<a href="#" class="menu__link menu__link_brown">
+										<span>Все услуги</span>
+									</a>
+								</div>	
+							</div>
+						</div>
+						<div class="menu__foot">
+							<div class="menu__nav">
+								<a href="#" class="menu__link">
+									<span>О Нас</span>
+								</a>
+								<a href="#" class="menu__link">
+									<span>Вакансии</span>
+								</a>
+								<a href="#" class="menu__link">
+									<span>Контакты</span>
+								</a>
+							</div>
+							<div class="menu__contact">
+								<div class="header-contact__items">
+									<a href="tel:88123390340" class="header-contact__item header-contact__item-phone">
+										<img src="assets/images/icons/phone-icon.svg" alt="">
+										<span>8 (812) 339-03-40</span>
+									</a>
+									<a href="mailto:info@npo-fenix.ru" class="header-contact__item header-contact__item">
+										<img src="assets/images/icons/mail-icon.svg" alt="">
+										<span>info@npo-fenix.ru</span>
+									</a>
+									<a href="https://yandex.ru/maps/org/npo_feniks/1464768750/?ll=30.555597%2C59.790230&source=wizbiz_new_map_single&z=17" class="header-contact__item" target="blank">
+										<img src="assets/images/icons/pin.svg" alt="">
+										<span>Санкт-Петербург,<br> пос. металлострой</span>
+									</a>
+									<div class="header-contact__item header-contact__item">
+										<img src="assets/images/icons/clock-icon.svg" alt="">
+										<span>График работы:<br> пн-пт 08:00 - 16:45 (офис)</span>
+									</div>
+								</div>
+								<div class="header-social">
+									<a href="#" class="header-social__icon header-social__icon_big" target="blank">
+										<svg>
+											<use xlink:href="#camera-icon"></use>
+										</svg>
+									</a>
+									<a href="#" class="header-social__icon" target="blank">
+										<svg>
+											<use xlink:href="#vk-icon"></use>
+										</svg>
+									</a>
+									<a href="#" class="header-social__icon header-social__icon_stroke" target="blank">
+										<svg>
+											<use xlink:href="#rusprof-icon"></use>
+										</svg>
+									</a>
+									<div class="header-lang">
+										<span>RU</span>
+										<div class="header-lang__dropdown">
+											<ul>
+												<li><a href="#">EN</a></li>
+												<li><a href="#">RU</a></li>
+											</ul>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
