--- a/index_form-error.html
+++ b/index_form-error.html
@@ -1149,7 +1149,7 @@
 					<h2 class="popup__title">Заказать<br> обратный звонок</h2>
 					<form action="#" class="form">
 						<div class="form__item">
-							<div class="form__input">
+							<div class="form__input error">
 								<input type="text">
 								<label>Как к Вам обращаться? <span>*</span></label>
 								<div class="form__notify">
