--- a/index_form-error.html
+++ b/index_form-error.html
@@ -1209,14 +1209,14 @@
 		    $(".open-popup").on("click", function (event) {
 		        name_pop = $(this).attr('data-popup');
 		        event.preventDefault();
-		        $(".popup."+name_pop).fadeIn(111);
-		        $(".popup."+name_pop+" .popup__inner").fadeIn(111);
+		        $(".popup."+name_pop).fadeIn(555);
+		        $(".popup."+name_pop+" .popup__inner").fadeIn(555);
 		        $('body').addClass("hidden");
 		    });
 		    $(".popup__close,  .closex").on("click", function (event) {
 		        event.preventDefault();
-		        $(".popup").fadeOut('111');
-		        $(".popup__inner").fadeOut(111);
+		        $(".popup").fadeOut(555);
+		        $(".popup__inner").fadeOut(555);
 		        $('body').removeClass("hidden");
 		    });
 			/*==============/popup=================*/
